fix: Ensure text visibility in NavBar for medium screens

--- a/src/shared/components/nav-bar/NavBar.module.scss
+++ b/src/shared/components/nav-bar/NavBar.module.scss
@@ -18,8 +18,8 @@
     &__text {
         color: inherit !important;
         
-        @include mq.to(s) {
-            display: none;
+        @include mq.to(m) {
+            display: none !important;
         }
     }
 }
